css/style.production.css
/*
* Prefixed by https://autoprefixer.github.io
* PostCSS: v7.0.29,
* Autoprefixer: v9.7.6
* Browsers: last 4 version
*/

/*
	Colors
	#e8e9eb: blueish white;
  #357b70: blue;
	#1420a6: dark blue;
  #357b70: dark teal;
	#fbff29: yellow;
  #9627c2: violet/purple;
  #489c79: teal;
*/

body {
	background-color: #e8e9eb;
	font-family: 'Oswald', sans-serif;
	font-weight: 400;
	font-size: 16px;
	line-height: 1.3;
}

a {
  color: #1420a6;
}

a:visited {
  /* visited link */
  color: #9627c2;
}

a:hover, a:focus {
  /* No underlining when hovering over a link */
  text-decoration: none;
}

a:active {
  /* selected link */
  color: #489c79;
}

.button {
  /* overwrites browser defaults and resets the border */
  border: none;
  display: inline-block;
  /* takes the font from the outer container */
  font-family: inherit;
  /* styles the background color, font color, and text decoration (underline, etc.) of the button */
  background-color: #357b70;
  color: white;
  text-decoration: none;
  /*adds spacing to the button (this will be discussed more in-depth later) */
  padding: 10px;
  border-radius: 3px;
  /* gives the button a bottom border with a width of 2px, a type of solid, and a color in RGBA format */
  border-bottom: 2px solid rgba(0, 0, 0, 0.3);
  -webkit-transition-duration: 0.2s;
       -o-transition-duration: 0.2s;
          transition-duration: 0.2s;
  -webkit-transition-property: opacity;
  -o-transition-property: opacity;
  transition-property: opacity;
}

button {
  /* overwrites browser defaults and resets the border */
  border: none;
  display: inline-block;
  /* takes the font from the outer container */
  font-family: inherit;
  /* styles the background color, font color, and text decoration (underline, etc.) of the button */
  background-color: #357b70;
  color: white;
  text-decoration: none;
  /*adds spacing to the button (this will be discussed more in-depth later) */
  padding: 10px;
  border-radius: 3px;
  /* gives the button a bottom border with a width of 2px, a type of solid, and a color in RGBA format */
  border-bottom: 2px solid rgba(0, 0, 0, 0.3);
  -webkit-transition-duration: 0.2s;
       -o-transition-duration: 0.2s;
          transition-duration: 0.2s;
  -webkit-transition-property: opacity;
  -o-transition-property: opacity;
  transition-property: opacity;
}


button:hover, button:focus, .button__secondary:hover, .button__secondary:focus,
.button:hover, .button:focus {
  /* lets the mouse appear as a hand when hovering over the button */
  cursor: pointer;
  /* reduces the opacity of the button to 80% */
  opacity: 0.8;
}

.button__secondary {
  background-color: #fbff29;
  color: black;
  border: none;
  border-bottom: 2px solid rgba(0, 0, 0, 0.2);
  border-radius: 2px;
}

.navigation-list__item--active {
  text-decoration: none;
}

.profile {
  max-width: 700px;
  margin: 0 auto;
}

.profile__portrait {
  margin-right: 20px;
  float: left;
  width: 250px;
  border-radius: 50%;
}

.page-footer {
  clear: both;
  display: -webkit-box;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-orient: vertical;
  -webkit-box-direction: normal;
      -ms-flex-direction: column;
          flex-direction: column;
  text-align: center;
}

* {
  -webkit-box-sizing: border-box;
          box-sizing: border-box;
}

.page-header {
  display: -webkit-box;
  display: -ms-flexbox;
  display: flex;
  width: 100%;
  padding: 20px;
  background-color: lightblue;
}

.page-header__item {
  -webkit-box-flex: 0;
      -ms-flex: 0 1 200px;
          flex: 0 1 200px;
}

.page-header__item:last-child {
  -webkit-box-flex: 1;
      -ms-flex-positive: 1;
          flex-grow: 1;
  text-align: right;
}

.navigation-list {
  list-style-type: none;
}

.navigation-list li {
  display: inline-block;
  margin-left: 15px;
}

/* start grid fallback */
.grid__item {
 display: inline-block;
 width: 33%;
}
/* end grid fallback */

@supports (display: grid) {
  .grid {
    display: -ms-grid;
    display: grid;
    -ms-grid-columns: 1fr 20px 1fr 20px 1fr;
    grid-template-columns: 1fr 1fr 1fr;
    grid-gap: 20px;
    padding: 10px;
  }

  .grid__item {
    background-color: lightblue;
    padding: 5px;
    width: 100%; /* Have to reassign width back to 100% if browser supports CSS grid, otherwise the grid__items will stay at 33% */
  }

  .grid__item:last-child {
    -ms-grid-column: 3;
    grid-column: 3 / 3;
    -ms-grid-row: 1;
    -ms-grid-row-span: 2;
    grid-row: 1 / 3;
  }
}

/* media query for resolution width 0px to 500px */
@media all and (max-width: 500px) {
  .grid {
    -ms-grid-columns: 1fr;
    grid-template-columns: 1fr;
  }
}

/* media query for resolution width 500px to 750px */
@media all and (min-width: 500px) and (max-width: 750px){
  .grid {
    -ms-grid-columns: 1fr 20px 1fr;
    grid-template-columns: 1fr 1fr;
  }
}

/* shared media query for resolution width 0px to 500px and 500px to 750px */
@media all and (max-width: 750px) {
  .grid {
    grid-gap: 10px;
  }
  .grid__item:last-child {
    grid-column: auto / auto;
    grid-row: auto / auto;
  }
  h1 {
    font-size: 22px;
  }
}

@-webkit-keyframes color-change {
  0% {
    fill: #edc655;
  }
  50% {
    fill: #fcffad;
  }
  100% {
    fill: #f76414;
  }
}

@keyframes color-change {
  0% {
    fill: #edc655;
  }
  50% {
    fill: #fcffad;
  }
  100% {
    fill: #f76414;
  }
}

@-webkit-keyframes cloud-move {
  from {
    -webkit-transform: translate(0, 50px);
            transform: translate(0, 50px);
  }
  to {
    -webkit-transform: translate(200px, 50px);
            transform: translate(200px, 50px);
  }
}

@keyframes cloud-move {
  from {
    -webkit-transform: translate(0, 50px);
            transform: translate(0, 50px);
  }
  to {
    -webkit-transform: translate(200px, 50px);
            transform: translate(200px, 50px);
  }
}

@-webkit-keyframes cloud-move-reverse {
  from {
    -webkit-transform: translate(446px, 48px);
            transform: translate(446px, 48px);
  }
  to {
    -webkit-transform: translate(100px, 48px);
            transform: translate(100px, 48px);
  }
}

@keyframes cloud-move-reverse {
  from {
    -webkit-transform: translate(446px, 48px);
            transform: translate(446px, 48px);
  }
  to {
    -webkit-transform: translate(100px, 48px);
            transform: translate(100px, 48px);
  }
}

.sun {
  -webkit-animation: 4s color-change infinite alternate linear;
          animation: 4s color-change infinite alternate linear;
}

.cloud-front {
  -webkit-animation: 30s cloud-move infinite alternate linear;
          animation: 30s cloud-move infinite alternate linear;
}

.cloud-back {
  -webkit-animation: 34s cloud-move-reverse infinite alternate linear;
          animation: 34s cloud-move-reverse infinite alternate linear;
}

ul.a {
  list-style-type: circle;
}

.center {
  margin: auto;
  width: 60%;
}

